# docs/swagger.json
@@ -3,8 +3,7 @@
     "info": {
         "description": "Para saber mais leia o README.md",
         "title": "Projeto do Desafio Go CRUD",
-        "contact": {},
-        "version": "1.0"
+        "contact": {}
     },
     "host": "localhost:3429",
     "basePath": "/",
@@ -16,6 +15,55 @@
                 ],
                 "tags": [
                     "Usuarios"
+                ],
+                "responses": {}
+            }
+        },
+        "/usuarios/atualizar": {
+            "put": {
+                "description": "Passe um email de um usuario existente. Preencha somente os campos que quer atualizar.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Usuarios"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Nome novo",
+                        "name": "nome",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "E-mail atual",
+                        "name": "emailAtual",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "E-mail novo",
+                        "name": "emailNovo",
+                        "in": "path"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Senha atual",
+                        "name": "senhaAtual",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Senha nova",
+                        "name": "senhaNova",
+                        "in": "path"
+                    }
                 ],
                 "responses": {}
             }
